--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "s-mcdonald/luca-accounts",
     "description": "Double Entry Transaction for PHP",
-    "keywords": ["Sam", "McDonald","double", "entry", "accounting", "accounts", "validator"],
+    "keywords": ["Sam McDonald","double", "entry", "accounting", "accounts", "validator"],
     "homepage": "https://github.com/s-mcdonald/LucaAccounts",    
     "license": "MIT",
     "version": "1.0.0",
@@ -13,12 +13,11 @@
         }
     ],
     "require": {
-        "php": ">=7.0",        
-        "nesbot/carbon": "~1.21"
+        "php": "^8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5@dev",
-        "mockery/mockery": "dev-master"
+        "phpunit/phpunit": "^10",
+        "mockery/mockery": "1.5.1"
     },
     "autoload": {
         "psr-4": {
